@@ -1,3 +1,7 @@
+2011-01-31  Corinna Vinschen  <corinna@vinschen.de>
+
+	* fhandler_socket.cc (address_in_use): Improve comment readability.
+
 2011-01-30  Corinna Vinschen  <corinna@vinschen.de>
 
 	* fhandler_socket.cc (address_in_use): Disable.  Add comment.
